--- a/crates/rb-types/Cargo.toml
+++ b/crates/rb-types/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rb-types"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [lib]
 doctest = false
@@ -14,16 +14,18 @@ openidconnect = ["dep:openidconnect"]
 ssh-key = ["dep:ssh-key"]
 
 [dependencies]
+chrono = { workspace = true, features = ["serde"] }
+clap = { workspace = true, optional = true }
+openidconnect = { workspace = true, optional = true }
+secrecy = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 sqlx = { workspace = true, default-features = false, features = [
     "macros",
 ], optional = true }
-secrecy = { workspace = true, optional = true }
-clap = { workspace = true, optional = true }
-openidconnect = { workspace = true, optional = true }
 ssh-key = { workspace = true, optional = true }
-chrono = { workspace = true, features = ["serde"] }
-uuid = { version = "1", features = ["v7", "serde"] }
-strum = { version = "0.26", features = ["derive"] }
-strum_macros = "0.26"
+strum.workspace = true
+uuid.workspace = true
+
+[dev-dependencies]
+strum_macros.workspace = true
