--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -16,6 +16,10 @@ web = [
     "tracing-web",
     "tracing-subscriber",
     "console_error_panic_hook",
+    "gloo-timers",
+    "gloo-events",
+    "wasm-bindgen",
+    "js-sys",
 ]
 server = [
     "anyhow",
@@ -33,46 +37,40 @@ server = [
     "async-trait",
     "openidconnect",
     "url",
+    "vt100",
 ]
 
 [dependencies]
+anyhow = { workspace = true, optional = true }
+async-trait = { workspace = true, optional = true }
+axum = { workspace = true, optional = true }
+axum_session = { workspace = true, optional = true }
+axum_session_auth = { workspace = true, optional = true }
+base64 = { workspace = true }
+chrono.workspace = true
+console_error_panic_hook = { workspace = true, optional = true }
+dioxus = { workspace = true, features = ["fullstack"] }
+futures = { workspace = true, optional = true }
+gloo-events = { workspace = true, optional = true }
+gloo-timers = { workspace = true, optional = true }
+js-sys = { workspace = true, optional = true }
+openidconnect = { workspace = true, optional = true }
+rb-types = { path = "../rb-types" }
+reqwest = { workspace = true }
+russh = { workspace = true, optional = true }
+secrecy = { workspace = true, optional = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-dioxus = { workspace = true, features = ["fullstack"] }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true, optional = true }
-tracing-web = { version = "0.1", optional = true }
-anyhow = { workspace = true, optional = true }
+server-core = { path = "../server-core", optional = true }
+thiserror = { workspace = true }
 tokio = { workspace = true, optional = true }
-axum = { workspace = true, optional = true }
 tower = { workspace = true, optional = true }
 tower-http = { workspace = true, optional = true, features = ["fs"] }
-reqwest = { workspace = true }
-web-sys = { version = "0.3", optional = true, features = [
-    "Storage",
-    "Window",
-    "DomRect",
-    "Element",
-    "HtmlElement",
-] }
-server-core = { path = "../server-core", optional = true }
-rb-types = { path = "../rb-types" }
-secrecy = { workspace = true, optional = true }
-russh = { workspace = true, optional = true }
-gloo-timers = { version = "0.3", features = ["futures"] }
-wasm-bindgen = "0.2"
-futures = { version = "0.3", optional = true }
-axum_session = { version = "0.17", optional = true }
-axum_session_auth = { version = "0.17", optional = true }
-async-trait = { workspace = true, optional = true }
-openidconnect = { workspace = true, optional = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true, optional = true }
+tracing-web = { workspace = true, optional = true }
 url = { workspace = true, optional = true }
-urlencoding = "2.1.3"
-js-sys = "0.3.82"
-chrono = { version = "0.4.42", features = ["serde"] }
-uuid = { version = "1.18.1", features = ["v4", "v7", "serde", "js"] }
-gloo-events = "0.2.0"
-base64 = { workspace = true }
-vt100 = "0.15"
-console_error_panic_hook = { version = "0.1", optional = true }
-thiserror = { workspace = true }
+uuid = { workspace = true, features = ["js"] }
+vt100 = { workspace = true, optional = true }
+wasm-bindgen = { workspace = true, optional = true }
+web-sys = { workspace = true, optional = true }
