--- a/crates/state-store/Cargo.toml
+++ b/crates/state-store/Cargo.toml
@@ -13,16 +13,15 @@ server = []
 test-support = ["dep:tempfile"]
 
 [dependencies]
+chrono = { workspace = true }
+dirs = { workspace = true }
+rb-types = { path = "../rb-types", features = ["sqlx"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros"] }
+tempfile = { workspace = true, optional = true }
+thiserror = { workspace = true }
 tokio = { workspace = true, features = ["fs", "sync"] }
 tracing = { workspace = true }
 url = { workspace = true }
-dirs = { workspace = true }
-serde = { workspace = true, features = ["derive"] }
-thiserror = { workspace = true }
-rb-types = { path = "../rb-types", features = ["sqlx"] }
-uuid = { version = "1", features = ["v7", "serde"] }
-zstd = "0.13"
-chrono = { workspace = true }
-serde_json = { workspace = true }
-tempfile = { workspace = true, optional = true }
+uuid.workspace = true
