refactor(web): modernize web components with WASM bindings and update dependencies
Replace dioxus::document::eval calls with direct web_sys and wasm_bindgen APIs for better performance and type safety.

Add new bindings.rs module for WASM extern functions. Update OIDC server handlers to use Dioxus server functions.

Remove libc dependency in favor of rustix for process signals. Switch UUID generation from v4 to v7 for better ordering. Reorganize workspace dependencies and features.

--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -19,6 +19,7 @@ web = [
     "gloo-timers",
     "gloo-events",
     "wasm-bindgen",
+    "wasm-bindgen-futures",
     "js-sys",
 ]
 server = [
@@ -73,4 +74,5 @@ url = { workspace = true, optional = true }
 uuid = { workspace = true, features = ["js"] }
 vt100 = { workspace = true, optional = true }
 wasm-bindgen = { workspace = true, optional = true }
+wasm-bindgen-futures = { workspace = true, optional = true }
 web-sys = { workspace = true, optional = true }
