--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,6 @@ gloo-timers = { version = "0.3", default-features = false, features = [
 hex = { version = "0.4", default-features = false, features = ["std"] }
 hkdf = { version = "0.12", default-features = false, features = ["std"] }
 js-sys = { version = "0.3", default-features = false, features = ["std"] }
-libc = { version = "0.2", default-features = false } # we can remove this if we get to clean up our get-pid code
 md5 = { version = "0.8.0", default-features = false }
 openidconnect = { version = "4", default-features = false, features = [
     "reqwest",
@@ -94,7 +93,10 @@ russh = { version = "0.54.6", default-features = false, features = [
     "des",
     "flate2",
 ] }
-rustix = { version = "1.1.2", default-features = false, features = ["termios"] }
+rustix = { version = "1.1.2", default-features = false, features = [
+    "termios",
+    "process",
+] }
 secrecy = { version = "0.10", default-features = false, features = ["serde"] }
 serde = { version = "1", default-features = false, features = [
     "std",
@@ -150,12 +152,12 @@ unicode-width = { version = "0.2", default-features = false }
 url = { version = "2.5", default-features = false }
 uuid = { version = "1", default-features = false, features = [
     "std",
-    "v4",
     "v7",
     "serde",
 ] }
 vt100 = { version = "0.15", default-features = false }
 wasm-bindgen = { version = "0.2", default-features = false, features = ["std"] }
+wasm-bindgen-futures = { version = "0.4" }
 web-sys = { version = "0.3", default-features = false, features = [
     "Storage",
     "Window",
@@ -164,6 +166,10 @@ web-sys = { version = "0.3", default-features = false, features = [
     "HtmlElement",
     "CustomEvent",
     "MouseEvent",
+    "Document",
+    "EventTarget",
+    "Event",
+    "CustomEventInit",
 ] }
 whoami = "1"
 zstd = { version = "0.13", default-features = false }
