feat(scheduler): implement centralized task scheduling system with admin UI
Add comprehensive task scheduling infrastructure replacing ad-hoc background tasks:
- New scheduler module with TaskManager, executor middleware, and registry
- Task types: TaskId, CronSchedule, TaskState, TaskOutcome with strong typing
- Built-in tasks: database vacuum, retention cleanup, SSH/web session cleanup
- Admin API endpoints: list, toggle, update schedule, trigger tasks
- Web UI: scheduled tasks page with real-time status and controls
- Replaces hardcoded intervals with configurable cron-based scheduling

Key improvements:
- Retry/timeout/panic handling for robust task execution
- Persistent task state and execution history
- Auto-refresh component for live monitoring
- Graceful pause/resume/trigger controls
- Centralized task registration and lifecycle management

This enables administrators to manage all background operations through a unified interface while providing better reliability and observability.

--- a/crates/rb-types/Cargo.toml
+++ b/crates/rb-types/Cargo.toml
@@ -16,6 +16,7 @@ ssh-key = ["dep:ssh-key"]
 [dependencies]
 chrono = { workspace = true, features = ["serde"] }
 clap = { workspace = true, optional = true }
+derive_more = { workspace = true }
 openidconnect = { workspace = true, optional = true }
 secrecy = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
@@ -25,6 +26,7 @@ sqlx = { workspace = true, default-features = false, features = [
 ], optional = true }
 ssh-key = { workspace = true, optional = true }
 strum.workspace = true
+thiserror = { workspace = true }
 uuid.workspace = true
 
 [dev-dependencies]
