--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,11 +46,18 @@ clap = { version = "4.5.53", default-features = false, features = [
     "derive",
 ] }
 console_error_panic_hook = "0.1"
+croner = "3.0"
 crossterm = { version = "0.29.0", default-features = false, features = [
     "events",
 ] }
+derive_more = { version = "2.1", default-features = false, features = [
+    "deref",
+    "display",
+    "from",
+    "into",
+] }
 des = { version = "0.8", default-features = false }
-dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
+dioxus = { version = "0.7", features = ["fullstack", "router"] }
 dirs = "6.0.0"
 futures = { version = "0.3", default-features = false, features = [
     "std",
@@ -134,6 +141,7 @@ tokio = { version = "1", default-features = false, features = [
     "io-util",
     "net",
 ] }
+tokio-cron-scheduler = { version = "0.15", default-features = false }
 tower = { version = "0.5.2", default-features = false }
 tower-http = { version = "0.6.6", default-features = false, features = [
     "fs",
