--- a/crates/server-core/Cargo.toml
+++ b/crates/server-core/Cargo.toml
@@ -14,6 +14,7 @@ axum_session_sqlx.workspace = true
 base64.workspace = true
 chacha20poly1305.workspace = true
 chrono.workspace = true
+croner.workspace = true
 futures.workspace = true
 hkdf.workspace = true
 openidconnect = { workspace = true, features = ["reqwest"] }
@@ -35,6 +36,7 @@ ssh-key.workspace = true
 state-store = { path = "../state-store", features = ["server"] }
 thiserror.workspace = true
 tokio.workspace = true
+tokio-cron-scheduler = { workspace = true }
 tracing.workspace = true
 tui-core.workspace = true
 uuid.workspace = true
